--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
