--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "framer-motion": "^11.11.4",
+    "lucide-react": "^0.451.0",
     "next": "14.2.5",
+    "portfolio": "file:",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
